demos/2-cnb/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/quarkusio/quarkus-quickstarts
  labels:
    app: quarkus-hello
    app.kubernetes.io/component: quarkus-hello
    app.kubernetes.io/instance: quarkus-hello
    app.kubernetes.io/name: quarkus-hello
    app.kubernetes.io/part-of: quarkus-hello-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-17-ubi8
  name: quarkus-hello
  namespace: ubi-buildpacks
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: quarkus-hello
    deployment: quarkus-hello
  sessionAffinity: None
  type: ClusterIP
